fix spacing footer

--- a/assets/src/scss/layout/footer.scss
+++ b/assets/src/scss/layout/footer.scss
@@ -23,7 +23,7 @@ $better-footer-design: false;
 
 .footer-main {
   background-color: $color-white;
-  padding: fix-font-size-hack(3em) 0;
+  padding: fix-font-size-hack(4em) 0;
 }
 
 .footer-contact {
